# Priyanka_TenderV02

./: .gitignore  .replit  CLEANUP_REPORT.md  PROJECT_OPTIMIZATION_SUMMARY.md  README.md  README_RAJKUMAR.md  WARP.md  app.py  bidder_database.json  comprehensive_tester.py  database_manager.py  date_utils.py  debug_logger.py  error_handler.py  excel_parser.py  pdf_generator.py  pdf_parser.py  performance_monitor.py  pyproject.toml  replit.md  requirements.txt  template_processor.py  test_data_generator.py  test_framework.py  test_margins.py  test_scenarios.py  user_manual_generator.py  utils.py  validation.py  zzz_ONE_CLICK_SETUP_AND_RUN.bat
.streamlit/: config.toml
ATTACHED_ASSETS/LaTeX_Templates/: latex_code_for_comparative_statement.TeX  latex_code_for_letter_of_aceptance.TeX  latex_code_for_scrutiny_sheet.TeX  latex_code_for_work_order.TeX
ATTACHED_ASSETS/MASTER RECORD/: # Tender Processing System Developm.txt
SAMPLE_OUTPUT/: acceptance letter.txt
attached_assets/: README_1753160808779.md  bidder_database_1753161373597.json  excel_parser_1753160808777.py  instructions.txt  latex_report_generator_1753160808778.py  pyproject_1753160808778.toml  replit_1753160808779.md  tender_bidders_1753160808779.db  tender_processor_1753160808780.py  test_nit_1.xlsx  test_nit_10.xlsx
attached_assets/LaTeX_Templates/: latex_code_for_comparative_statement.TeX  latex_code_for_letter_of_aceptance.TeX  latex_code_for_scrutiny_sheet.TeX  latex_code_for_work_order.TeX
outputs/: comparative_statement_03_2025-26.tex  letter_of_acceptance_03_2025-26.tex  scrutiny_sheet_03_2025-26.tex  test_pdf.py  work_order_03_2025-26.tex
templates/: comparative_statement.tex  letter_of_acceptance.tex  scrutiny_sheet.tex  work_order.tex
